--- a/index.html
+++ b/index.html
@@ -12,50 +12,50 @@
 <body>
     <div class="sushi-prices">
         <div class="sushi-button" id="green-plate">
-            <span onclick="greenMinus()" id="gMinus" class="minus-plate"><i class="ion-minus-round"></i></span>
+            <span onclick="greenMinus()" id="green-minus" class="minus-plate"><i class="ion-minus-round"></i></span>
             <span class="price">£1.90</span>
             <input type="text" value="0" id="green-total" class="tally"></input>
             <span onclick="greenAdd()" class="plus-plate"><i class="ion-plus-round"></i></span>
         </div>
         <div class="sushi-button" id="blue-plate">
-            <span onclick="blueMinus()" id="bMinus" class="minus-plate"><i class="ion-minus-round"></i></span>
+            <span onclick="blueMinus()" id="blue-minus" class="minus-plate"><i class="ion-minus-round"></i></span>
             <span class="price">£2.50</span>
             <input type="text" value="0" id="blue-total" class="tally"></input>
             <span onclick="blueAdd()" class="plus-plate"><i class="ion-plus-round"></i></span>
         </div>
         <div class="sushi-button" id="purple-plate">
-            <span onclick="purpleMinus()" id="puMinus" class="minus-plate"><i class="ion-minus-round"></i></span>
+            <span onclick="purpleMinus()" id="purple-minus" class="minus-plate"><i class="ion-minus-round"></i></span>
             <span class="price">£3.10</span>
             <input type="text" value="0" id="purple-total" class="tally"></input>
             <span onclick="purpleAdd()" id="gMinus" class="plus-plate"><i class="ion-plus-round"></i></span>
         </div>
         <div class="sushi-button" id="orange-plate">
-            <span onclick="orangeMinus()" id="oMinus" class="minus-plate"><i class="ion-minus-round"></i></span>
+            <span onclick="orangeMinus()" id="orange-minus" class="minus-plate"><i class="ion-minus-round"></i></span>
             <span class="price">£3.60</span>
             <input type="text" value="0" id="orange-total" class="tally"></input>
             <span onclick="orangeAdd()" id="gMinus" class="plus-plate"><i class="ion-plus-round"></i></span>
         </div>
         <div class="sushi-button" id="pink-plate">
-            <span onclick="pinkMinus()" id="pMinus" class="minus-plate"><i class="ion-minus-round"></i></span>
+            <span onclick="pinkMinus()" id="pink-minus" class="minus-plate"><i class="ion-minus-round"></i></span>
             <span class="price">£4.10</span>
             <input type="text" value="0" id="pink-total" class="tally"></input>
             <span onclick="pinkAdd()" class="plus-plate"><i class="ion-plus-round"></i></span>
         </div>
         <div class="sushi-button" id="grey-plate">
-            <span onclick="greyMinus()" id="grMinus" class="minus-plate"><i class="ion-minus-round"></i></span>
+            <span onclick="greyMinus()" id="grey-minus" class="minus-plate"><i class="ion-minus-round"></i></span>
             <span class="price">£5.00</span>
             <input type="text" value="0" id="grey-total" class="tally"></input>
             <span onclick="greyAdd()" class="plus-plate"><i class="ion-plus-round"></i></span>
         </div>
         <div class="sushi-button" id="yellow-plate">
-            <span onclick="yellowMinus()" id="yMinus" class="minus-plate"><i class="ion-minus-round"></i></span>
+            <span onclick="yellowMinus()" id="yellow-minus" class="minus-plate"><i class="ion-minus-round"></i></span>
             <span class="price">£6.00</span>
             <input type="text" value="0" id="yellow-total" class="tally"></input>
             <span onclick="yellowAdd()" class="plus-plate"><i class="ion-plus-round"></i></span>
         </div>
     </div>
     <div class="sushi-total">
-        <input type="text" id="total" class="total" value="0"></input>
+        <input type="text" id="total" class="total" value="0" disabled="disabled"></input>
     </div>
 </body>
 <script src="main.js"></script>
